# Roblox-Creator-Studio

./: .env.example  IT Service Desk Homepage.url  LICENSE  PROJECT_STRUCTURE.md  README.md  asset_manager.py  camera.py  config.py  game_engine.py  headless_shims.py  lighting.py  main.py  network_manager.py  physics_engine.py  player.py  pyproject.toml  requirements.txt  setup.py  ui_manager.py  vector3.py  world.py
.github/workflows/: ci.yml
bench/: README.md  RESULTS.md  RESULTS.tmp
cpp/: CMakeLists.txt  Dockerfile
cpp/src/: main.cpp
docker/: docker-compose.min.yml  docker-compose.yml
docker/init-scripts/: init.sql
docker/monitoring/: prometheus.yml
docker/monitoring/grafana/dashboards/: placeholder.json
docker/nginx/: nginx.conf
docs/: ARCHITECTURE.md  AUTHORITY_REPLICATION.md  CONTRIBUTING.md  DEMO.md  GOOD_FIRST_ISSUES.md  PROJECTS.md
go/: Dockerfile  go.mod
go/database/: database.go
go/models/: models.go
go/networking/: client.go
go/server/: main.go
lua/scripts/: game_logic.lua  roblox_style.luau
nodejs/: Dockerfile  package.json
nodejs/server/: index.js
python/: Dockerfile  main.py
scripts/: bench_client_tick.py  bench_ws_throughput.py  dev  make_demo_gif.sh  test.py  ws_chat.py
tests/unit/: test_smoke.py
typescript/: Dockerfile  package.json
typescript/src/: main.ts
